Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15642

ListView.onAdd signal is not called for the first item added

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.4
    • 4.7.1
    • None
    • QMLViewer, qt 4.7.1, osx 10.6.5
    • b3080d78f2ff2d98410249e09d5d7d6e20fd155c

    Description

      When declaring a ListView and appending Elements to its model dynamically, the attached signal onAdd is not fired for the first item added.

      See attached example

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bealam Bea Lam (closed Nokia identity) (Inactive)
            hhinrich Henrik Hinrichs
            Votes:
            7 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes